--- a/UWP/Control/App.xaml
+++ b/UWP/Control/App.xaml
@@ -2,6 +2,7 @@
     x:Class="Control.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Control">
+    xmlns:local="using:Control"
+    RequestedTheme="Light">
 
 </Application>
