--- a/UWP/Control/PlayGround/PlayGround/App.xaml
+++ b/UWP/Control/PlayGround/PlayGround/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application
-    x:Class="Control.App"
+    x:Class="PlayGround.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Control"
-    RequestedTheme="Light">
+    xmlns:local="using:PlayGround">
 
 </Application>
