--- a/UWP/Control/PlayGroundControl/PlayGroundControl/App.xaml
+++ b/UWP/Control/PlayGroundControl/PlayGroundControl/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="PlayGround.App"
+    x:Class="PlayGroundControl.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PlayGround">
+    xmlns:local="using:PlayGroundControl">
 
 </Application>
