--- a/UWP/TaskList/View/NewTaskPage.xaml
+++ b/UWP/TaskList/View/NewTaskPage.xaml
@@ -24,7 +24,7 @@
                 <CompositeTransform Rotation="0"/>
             </customControl1:GradientPlanePicker.RenderTransform>
         </customControl1:GradientPlanePicker>
-            <Button Height="100" Width="200" Content="Создать" FontSize="30" Margin="300 0 0 0"/>
+            <Button Height="100" Width="200" Content="Создать" FontSize="30" Margin="300 0 0 0" Command="{Binding CreateTaskCommand}"/>
         </StackPanel>
     </StackPanel>
 </Page>
