Добавлен сервис INewTaskViewModel

--- a/UWP/TaskList/View/NewTaskPage.xaml
+++ b/UWP/TaskList/View/NewTaskPage.xaml
@@ -11,7 +11,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <StackPanel Margin="50,0,50,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
-        <TextBlock Text="Создание новой задачи" TextAlignment="Center" FontSize="25" FontWeight="Bold"/>
+        <TextBlock Text="Создание новой задачи" TextAlignment="Center" FontSize="25"  FontWeight="Bold"/>
 
         <StackPanel>
             <TextBlock Text="Введите название новой задачи:" FontSize="15"/>
@@ -23,22 +23,22 @@
             <TextBox Text="{Binding NewTaskDescription, Mode=TwoWay}" FontSize="15"/>
         </StackPanel>
 
-        <StackPanel Height="630" Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <TextBlock Text="Задайте необходимость и срочность выполнения задачи на плоскости Эйзенхауэра" FontSize="15" Height="22" Margin="0,0,0,0" RenderTransformOrigin="0.497,0.75" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-            <StackPanel Orientation="Horizontal" Margin="10,0,0,0" HorizontalAlignment="Left" Width="918" Height="446">
-                <customControl1:GradientPlanePicker X="{Binding X, Mode=TwoWay}" Y="{Binding Y, Mode=TwoWay}" Loaded="GradientPlanePicker_Loaded" Margin="98,0,-28,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <StackPanel Height="629" Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+            <TextBlock Text="Задайте необходимость и срочность выполнения задачи на плоскости Эйзенхауэра" FontSize="15" Height="22" FontWeight="Bold" Margin="20,0,0,0" RenderTransformOrigin="0.497,0.75" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <StackPanel Orientation="Horizontal" Margin="10,0,0,0" HorizontalAlignment="Left" Width="918" Height="514" VerticalAlignment="Stretch">
+                <customControl1:GradientPlanePicker X="{Binding ImportanceMeasure, Mode=TwoWay}" Y="{Binding UrgencyMeasure, Mode=TwoWay}" Loaded="GradientPlanePicker_Loaded" Margin="98,0,4,0" Height="504">
                     <customControl1:GradientPlanePicker.RenderTransform>
                         <CompositeTransform Rotation="0"/>
                     </customControl1:GradientPlanePicker.RenderTransform>
                 </customControl1:GradientPlanePicker>
                 <Button Height="75" Width="165" Content="Создать" FontSize="15" Command="{Binding CreateTaskCommand}" HorizontalAlignment="Left" Margin="102,0,0,0" VerticalAlignment="Center"/>
-                <TextBlock x:Name="textBlock" Margin="-975,0,819.794,0" Text="Необходимость" TextWrapping="Wrap" FontSize="48" Height="128" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto">
+                <TextBlock x:Name="textBlock" Margin="-828,0,663,0" Text="Срочность" TextWrapping="Wrap" FontSize="20" Height="34" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto">
                     <TextBlock.RenderTransform>
                         <CompositeTransform Rotation="-89.544"/>
                     </TextBlock.RenderTransform>
                 </TextBlock>
             </StackPanel>
-            <TextBlock x:Name="textBlock1" Margin="244,0,0,0" Text="Срочность" TextWrapping="Wrap" FontSize="48" HorizontalAlignment="Left" Width="290" Height="68"/>
+            <TextBlock x:Name="textBlock1" Margin="205,0,0,0" Text="Необходимость" TextWrapping="Wrap" FontSize="20" HorizontalAlignment="Center" Width="383" Height="33" VerticalAlignment="Stretch"/>
         </StackPanel>
 
     </StackPanel>
