--- a/UWP/TaskList/View/NewTaskPage.xaml
+++ b/UWP/TaskList/View/NewTaskPage.xaml
@@ -6,9 +6,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
- xmlns:customControl1="using:TaskList"
-    
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+ xmlns:customControl1="using:TaskList">
+    <Page.Background>
+        <AcrylicBrush/>
+    </Page.Background>
     <StackPanel Margin="50,0,50,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
         <TextBlock Text="Создание новой задачи" TextAlignment="Center" FontSize="25"  FontWeight="Bold"/>
