--- a/UWP/TaskList/View/TaskListPage.xaml
+++ b/UWP/TaskList/View/TaskListPage.xaml
@@ -2,11 +2,14 @@
     x:Class="TaskList.View.TaskListPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TaskList.View"
+    xmlns:local="using:TaskList.TestViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" 
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.DataContext>
+        <local:TestTaskListViewModel/>
+    </Page.DataContext>
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*"/>
