--- a/UWP/TaskList/View/TaskListPage.xaml
+++ b/UWP/TaskList/View/TaskListPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TaskList.TestViewModel"
+    xmlns:converter="using:TaskList"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" 
@@ -10,6 +11,11 @@
     <Page.DataContext>
         <local:TestTaskListViewModel/>
     </Page.DataContext>
+    <Page.Resources>
+        <converter:UrgencyConverter x:Key="UrgencyConverter"/>
+        <converter:ImportanceConverter x:Key="ImportanceConverter"/>
+    </Page.Resources>
+    
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*"/>
@@ -40,8 +46,12 @@
 
                             <StackPanel Orientation="Horizontal">
                                 <Rectangle Width="20" Height="20" Fill="{Binding TaskColor}"/>
-                                <TextBlock Text="{Binding DegreeОfImportance}" Foreground="Black"
-                                       FontSize="20"/>
+                                <TextBlock Text="{Binding Importance, Converter={StaticResource ImportanceConverter}}" 
+                                    Foreground="Black" FontSize="20" Margin="0 0 5 0"
+                                    HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                                <TextBlock Text="{Binding Urgency, Converter={StaticResource UrgencyConverter}}" 
+                                    Foreground="Black" FontSize="20" Margin="5 0 0 0"
+                                    HorizontalAlignment="Right" VerticalAlignment="Center"/>
                             </StackPanel>
                         </StackPanel>
                     </DataTemplate>
@@ -59,8 +69,11 @@
                                        FontSize="20" TextWrapping="Wrap"/>
                 <StackPanel Orientation="Horizontal">
                     <Rectangle Width="20" Height="20" Fill="{Binding SelectedTask.TaskColor}"/>
-                    <TextBlock Text="{Binding SelectedTask.DegreeОfImportance}" 
-                           Foreground="Black" FontSize="20" 
+                    <TextBlock Text="{Binding SelectedTask.Importance, Converter={StaticResource ImportanceConverter}}" 
+                           Foreground="Black" FontSize="20" Margin="0 0 5 0"
+                           HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                    <TextBlock Text="{Binding SelectedTask.Urgency, Converter={StaticResource UrgencyConverter}}" 
+                           Foreground="Black" FontSize="20" Margin="5 0 0 0"
                            HorizontalAlignment="Right" VerticalAlignment="Center"/>
                 </StackPanel>
             </StackPanel>
